--- a/scss/app.scss
+++ b/scss/app.scss
@@ -3,6 +3,7 @@
 @import "layout";
 @import "modern-scale";
 @import "typography";
+@import "svg";
 
 // Or selectively include components
 // @import
