Added Instafeed.js, began animating css with Animate.js

--- a/scss/_svg.scss
+++ b/scss/_svg.scss
@@ -1,24 +1,16 @@
 // SVG Stylesheet
-@import "compass/css3/transition";
-
 svg{
 	max-height: 600px ;
-	
-	-webkit-transform: translate(0px,0px);
 
 	&:hover{
-		@include transition(all .2s linear);
 		#mortarboard-whole{
-			-webkit-transform: translate(0px,-320px);
+			-webkit-transform-origin: 100% 100%;
 		}
 	} 
 }
 #mortarboard-whole{
 	//fill: #003366;
-	@include transition(all .2s ease-in-out);
-	-webkit-transform: translate(0px,0px);
-	position: relative;
-	top: 10px;
+	//-webkit-transform: translate(0px,0px);
 }
 #chin{
 	//fill: #ffcc00 !important;
