--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,9 +1,11 @@
+@import "main";
 @import "settings";
 @import "foundation";
 @import "layout";
 @import "modern-scale";
 @import "typography";
 @import "svg";
+@import "photo";
 
 // Or selectively include components
 // @import
