--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -19,10 +19,11 @@ h1, h2, h3, h4, h5, h6{
 	}
 	h3.byline{
 		margin: 0px;
+		font-style: italic;
 		margin-top: $byline-margin;
 		margin-bottom: $byline-margin*.3;
-		border-top: 3px black solid;
-		border-bottom: 3px black solid;
+		border-top: 1px black solid;
+		border-bottom: 1px black solid;
 	}
 }
 .content{
