--- a/scss/_svg.scss
+++ b/scss/_svg.scss
@@ -1,17 +1,52 @@
 // SVG Stylesheet
-svg{
-	max-height: 600px ;
+$items: 4; //How many boards are there?
+$duration: 7; //How long each should last, measured in seconds
+$base-wait:0s; // When should the first one kick in?
 
-	&:hover{
-		#mortarboard-whole{
-			-webkit-transform-origin: 100% 100%;
-		}
-	} 
+$total-time: ($items * $duration); //The total time it should take to get through all the panels
+$percentage-last: 100/$items; //At what percentage should the first item be faded out?
+$one-second: 100/$total-time; //The equivilent of one second
+$fade-in-time: ($one-second); //The fade in time
+$wait: ($duration)-($one-second/5);
+
+@-webkit-keyframes fadeIn { 0% { opacity:0; } #{$fade-in-time * 1%} { opacity:1; } #{ ($percentage-last - $fade-in-time) * 1%} { opacity:1; } #{$percentage-last * 1%}  { opacity:0; }  }
+   @-moz-keyframes fadeIn { 0% { opacity:0; } #{$fade-in-time * 1%} { opacity:1; } #{ ($percentage-last - $fade-in-time) * 1%} { opacity:1; } #{$percentage-last * 1%}  { opacity:0; }  }
+     @-o-keyframes fadeIn { 0% { opacity:0; } #{$fade-in-time * 1%} { opacity:1; } #{ ($percentage-last - $fade-in-time) * 1%} { opacity:1; } #{$percentage-last * 1%}  { opacity:0; }  }
+        @keyframes fadeIn { 0% { opacity:0; } #{$fade-in-time * 1%} { opacity:1; } #{ ($percentage-last - $fade-in-time) * 1%} { opacity:1; } #{$percentage-last * 1%}  { opacity:0; }  }
+
+
+#main-title{
+	min-width: 100%;
 }
-#mortarboard-whole{
-	//fill: #003366;
-	//-webkit-transform: translate(0px,0px);
-}
-#chin{
-	//fill: #ffcc00 !important;
+.mortarboard-banner{
+	// position: absolute;
+	min-width:100%; 
+	height:120%;
+	#red-stars, #four-pillars, #waves, #green-waves{
+		opacity: 0;
+	}
+	#red-stars{
+		-webkit-animation: fadeIn #{$total-time * 1s} ease-in-out #{$base-wait} infinite;
+	       -moz-animation: fadeIn #{$total-time * 1s} ease-in-out #{$base-wait} infinite;
+   		     -o-animation: fadeIn #{$total-time * 1s} ease-in-out #{$base-wait} infinite;
+       	        animation: fadeIn #{$total-time * 1s} ease-in-out #{$base-wait} infinite;
+	}	
+	#four-pillars{
+		-webkit-animation: fadeIn #{$total-time * 1s} ease-in-out #{$base-wait + (($wait*1) * 1s)} infinite;
+	       -moz-animation: fadeIn #{$total-time * 1s} ease-in-out #{$base-wait + (($wait*1) * 1s)} infinite;
+   		     -o-animation: fadeIn #{$total-time * 1s} ease-in-out #{$base-wait + (($wait*1) * 1s)} infinite;
+       	        animation: fadeIn #{$total-time * 1s} ease-in-out #{$base-wait + (($wait*1) * 1s)} infinite;
+	}	
+	#waves{
+		-webkit-animation: fadeIn #{$total-time * 1s} ease-in-out #{$base-wait + (($wait*2) * 1s)} infinite;
+	       -moz-animation: fadeIn #{$total-time * 1s} ease-in-out #{$base-wait + (($wait*2) * 1s)} infinite;
+   		     -o-animation: fadeIn #{$total-time * 1s} ease-in-out #{$base-wait + (($wait*2) * 1s)} infinite;
+       	        animation: fadeIn #{$total-time * 1s} ease-in-out #{$base-wait + (($wait*2) * 1s)} infinite;
+	}
+	#green-waves{
+		-webkit-animation: fadeIn #{$total-time * 1s} ease-in-out #{$base-wait + (($wait*3) * 1s)} infinite;
+	       -moz-animation: fadeIn #{$total-time * 1s} ease-in-out #{$base-wait + (($wait*3) * 1s)} infinite;
+   		     -o-animation: fadeIn #{$total-time * 1s} ease-in-out #{$base-wait + (($wait*3) * 1s)} infinite;
+       	        animation: fadeIn #{$total-time * 1s} ease-in-out #{$base-wait + (($wait*3) * 1s)} infinite;
+	}	 		
 }
