--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /* line 3, ../scss/_main.scss */
 * {
   -moz-transition: all 0.2s ease-in-out;
@@ -7799,9 +7798,9 @@ th.hide-for-touch {
   display: table-cell !important;
 }
 
-/* line 4, ../scss/_layout.scss */
-.main-title {
-  margin-top: 50px;
+/* line 3, ../scss/_layout.scss */
+#main-title {
+  background-size: 100%;
 }
 
 /* line 7, ../scss/_layout.scss */
@@ -7811,43 +7810,56 @@ th.hide-for-touch {
 
 /* line 5, ../scss/_typography.scss */
 body {
-  font-family: "ff-tisa-web-pro", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+  font-family: "soleil", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
 }
 
 /* line 9, ../scss/_typography.scss */
 h1, h2, h3, h4, h5, h6 {
-  font-family: "kepler-std", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+  font-family: "foco", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
 }
 
 /* line 13, ../scss/_typography.scss */
-.main-title {
+#main-title {
   text-align: center;
+  color: white;
+  overflow: hidden;
 }
-/* line 15, ../scss/_typography.scss */
-.main-title h1.title {
+/* line 17, ../scss/_typography.scss */
+#main-title .mortarboard-banner {
+  top: 0px;
+  left: 0px;
+  width: 100%;
+}
+/* line 22, ../scss/_typography.scss */
+#main-title h1.title {
   margin: 0px;
+  color: white;
+  font-weight: black;
   margin-bottom: .4em;
 }
-/* line 20, ../scss/_typography.scss */
-.main-title h3.byline {
+/* line 28, ../scss/_typography.scss */
+#main-title .spacer {
+  min-height: 1em;
+}
+/* line 31, ../scss/_typography.scss */
+#main-title h3.byline {
   margin: 0px;
+  color: white;
   font-style: italic;
   margin-top: 1em;
   margin-bottom: 0.3em;
-  border-top: 1px black solid;
-  border-bottom: 1px black solid;
 }
 
-/* line 29, ../scss/_typography.scss */
+/* line 41, ../scss/_typography.scss */
 .content {
   margin-top: 0.4em;
   text-align: justify;
 }
-/* line 33, ../scss/_typography.scss */
+/* line 45, ../scss/_typography.scss */
 .content .intro {
   font-style: italic;
 }
-/* line 35, ../scss/_typography.scss */
+/* line 47, ../scss/_typography.scss */
 .content .intro::first-letter {
   float: left;
   padding: 0px;
@@ -7857,13 +7869,131 @@ h1, h2, h3, h4, h5, h6 {
   line-height: .77em;
 }
 
-/* line 2, ../scss/_svg.scss */
-svg {
-  max-height: 600px;
+@-webkit-keyframes fadeIn {
+  /* line 12, ../scss/_svg.scss */
+  0% {
+    opacity: 0;
+  }
+
+  /* line 12, ../scss/_svg.scss */
+  3.57143% {
+    opacity: 1;
+  }
+
+  /* line 12, ../scss/_svg.scss */
+  21.42857% {
+    opacity: 1;
+  }
+
+  /* line 12, ../scss/_svg.scss */
+  25% {
+    opacity: 0;
+  }
 }
-/* line 6, ../scss/_svg.scss */
-svg:hover #mortarboard-whole {
-  -webkit-transform-origin: 100% 100%;
+@-moz-keyframes fadeIn {
+  /* line 13, ../scss/_svg.scss */
+  0% {
+    opacity: 0;
+  }
+
+  /* line 13, ../scss/_svg.scss */
+  3.57143% {
+    opacity: 1;
+  }
+
+  /* line 13, ../scss/_svg.scss */
+  21.42857% {
+    opacity: 1;
+  }
+
+  /* line 13, ../scss/_svg.scss */
+  25% {
+    opacity: 0;
+  }
+}
+@-o-keyframes fadeIn {
+  /* line 14, ../scss/_svg.scss */
+  0% {
+    opacity: 0;
+  }
+
+  /* line 14, ../scss/_svg.scss */
+  3.57143% {
+    opacity: 1;
+  }
+
+  /* line 14, ../scss/_svg.scss */
+  21.42857% {
+    opacity: 1;
+  }
+
+  /* line 14, ../scss/_svg.scss */
+  25% {
+    opacity: 0;
+  }
+}
+@keyframes fadeIn {
+  /* line 15, ../scss/_svg.scss */
+  0% {
+    opacity: 0;
+  }
+
+  /* line 15, ../scss/_svg.scss */
+  3.57143% {
+    opacity: 1;
+  }
+
+  /* line 15, ../scss/_svg.scss */
+  21.42857% {
+    opacity: 1;
+  }
+
+  /* line 15, ../scss/_svg.scss */
+  25% {
+    opacity: 0;
+  }
+}
+/* line 18, ../scss/_svg.scss */
+#main-title {
+  min-width: 100%;
+}
+
+/* line 21, ../scss/_svg.scss */
+.mortarboard-banner {
+  min-width: 100%;
+  height: 120%;
+}
+/* line 25, ../scss/_svg.scss */
+.mortarboard-banner #red-stars, .mortarboard-banner #four-pillars, .mortarboard-banner #waves, .mortarboard-banner #green-waves {
+  opacity: 0;
+}
+/* line 28, ../scss/_svg.scss */
+.mortarboard-banner #red-stars {
+  -webkit-animation: fadeIn 28s ease-in-out 0s infinite;
+  -moz-animation: fadeIn 28s ease-in-out 0s infinite;
+  -o-animation: fadeIn 28s ease-in-out 0s infinite;
+  animation: fadeIn 28s ease-in-out 0s infinite;
+}
+/* line 34, ../scss/_svg.scss */
+.mortarboard-banner #four-pillars {
+  -webkit-animation: fadeIn 28s ease-in-out 6.28571s infinite;
+  -moz-animation: fadeIn 28s ease-in-out 6.28571s infinite;
+  -o-animation: fadeIn 28s ease-in-out 6.28571s infinite;
+  animation: fadeIn 28s ease-in-out 6.28571s infinite;
+}
+/* line 40, ../scss/_svg.scss */
+.mortarboard-banner #waves {
+  -webkit-animation: fadeIn 28s ease-in-out 12.57143s infinite;
+  -moz-animation: fadeIn 28s ease-in-out 12.57143s infinite;
+  -o-animation: fadeIn 28s ease-in-out 12.57143s infinite;
+  animation: fadeIn 28s ease-in-out 12.57143s infinite;
+}
+/* line 46, ../scss/_svg.scss */
+.mortarboard-banner #green-waves {
+  -webkit-animation: fadeIn 28s ease-in-out 18.85714s infinite;
+  -moz-animation: fadeIn 28s ease-in-out 18.85714s infinite;
+  -o-animation: fadeIn 28s ease-in-out 18.85714s infinite;
+  animation: fadeIn 28s ease-in-out 18.85714s infinite;
 }
 
 /* line 1, ../scss/_photo.scss */
