--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -1,11 +1,3 @@
-/* line 3, ../scss/_main.scss */
-* {
-  -moz-transition: all 0.2s ease-in-out;
-  -o-transition: all 0.2s ease-in-out;
-  -webkit-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
-}
-
 /* line 260, ../bower_components/foundation/scss/foundation/components/_global.scss */
 meta.foundation-version {
   font-family: "/5.2.2/";
@@ -7798,6 +7790,14 @@ th.hide-for-touch {
   display: table-cell !important;
 }
 
+/* line 1, ../scss/_main.scss */
+* {
+  -moz-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
+
 /* line 3, ../scss/_layout.scss */
 #main-title {
   background-size: 100%;
@@ -7808,71 +7808,71 @@ th.hide-for-touch {
   margin-top: .5em;
 }
 
-/* line 5, ../scss/_typography.scss */
+/* line 6, ../scss/_typography.scss */
 body {
-  font-family: "soleil", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+  font-family: "Proxima-Nova", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
 }
 
-/* line 9, ../scss/_typography.scss */
+/* line 10, ../scss/_typography.scss */
 h1, h2, h3, h4, h5, h6 {
-  font-family: "foco", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+  font-family: "Proxima-Nova", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
 }
 
-/* line 13, ../scss/_typography.scss */
+/* line 14, ../scss/_typography.scss */
 #main-title {
   text-align: center;
-  color: white;
-  overflow: hidden;
 }
-/* line 17, ../scss/_typography.scss */
+/* line 16, ../scss/_typography.scss */
 #main-title .mortarboard-banner {
   top: 0px;
   left: 0px;
   width: 100%;
 }
-/* line 22, ../scss/_typography.scss */
+/* line 21, ../scss/_typography.scss */
 #main-title h1.title {
+  -moz-transition: none;
+  -o-transition: none;
+  -webkit-transition: none;
+  transition: none;
   margin: 0px;
-  color: white;
-  font-weight: black;
+  font-weight: bold;
   margin-bottom: .4em;
 }
-/* line 28, ../scss/_typography.scss */
+/* line 27, ../scss/_typography.scss */
 #main-title .spacer {
   min-height: 1em;
 }
-/* line 31, ../scss/_typography.scss */
+/* line 30, ../scss/_typography.scss */
 #main-title h3.byline {
   margin: 0px;
-  color: white;
   font-style: italic;
   margin-top: 1em;
   margin-bottom: 0.3em;
 }
 
-/* line 41, ../scss/_typography.scss */
+/* line 39, ../scss/_typography.scss */
 .content {
   margin-top: 0.4em;
   text-align: justify;
 }
-/* line 45, ../scss/_typography.scss */
+/* line 43, ../scss/_typography.scss */
 .content .intro {
   font-style: italic;
 }
-/* line 47, ../scss/_typography.scss */
+/* line 45, ../scss/_typography.scss */
 .content .intro::first-letter {
-  background-image: url(/assets/diamond.svg);
+  background-image: url(/assets/img/diamond.svg);
   float: left;
   color: white;
+  text-align: center;
   padding: 0px;
   margin: 0px;
-  font-style: none;
+  font-style: normal;
   font-weight: bold;
-  padding-left: .3em;
   font-size: 3em;
   line-height: 1.5em;
   height: 1.5em;
-  width: 1.2em;
+  width: 1.5em;
 }
 
 @-webkit-keyframes fadeIn {
@@ -7990,8 +7990,26 @@ h1, h2, h3, h4, h5, h6 {
   -webkit-filter: grayscale(100%);
   filter: grayscale(100%);
 }
-/* line 12, ../scss/_photo.scss */
+/* line 11, ../scss/_photo.scss */
 #instafeed li a img:hover {
   -webkit-filter: grayscale(0%);
   filter: grayscale(0%);
+}
+
+/* line 1, ../scss/_slider.scss */
+ul#slider {
+  margin: 0px;
+  padding: 0px;
+  -moz-perspective: 5000;
+  -webkit-perspective: 5000;
+  perspective: 5000;
+}
+/* line 5, ../scss/_slider.scss */
+ul#slider li.face {
+  list-style: none;
+  display: inline-block;
+  display: block;
+  width: 100px;
+  height: 300px;
+  position: absolute;
 }
