Flipping animation complete with CSS3, beginning transition to Velocity.Js

--- a/scss/_slider.scss
+++ b/scss/_slider.scss
@@ -13,7 +13,7 @@ ul#slider{
 		@include transform(rotateY(180deg));
 		@include backface-visibility(hidden);
 	}
-	.active{
+	.side.active{
 		@include transform(rotateY(0deg));
 	}
 	li.face{
