--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -44,10 +44,12 @@ h1, h2, h3, h4, h5, h6{
 		font-style: italic;
 		&::first-letter{
 			background-image: url(/assets/img/diamond.svg);
+			background-repeat: no-repeat;
 			float:left;
 			color: white;
 			text-align: center;
 			padding: 0px;
+			padding-right: .2em;
 			margin:0px;
 			font-style: normal;
 			font-weight: bold;
